--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.6",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/mulish": "^5.0.13",
     "@mui/material": "^5.14.13",
     "@next/font": "^13.5.5",
+    "axios": "^1.6.0",
+    "graphql": "^16.8.1",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
